# CIL

./: .gitignore  CIL.sln  CIL.vcxproj  CIL.vcxproj.filters  CMakeLists.txt  README.md  index.html  params.json
cmake/: FindOpenCL.cmake
docs/week001/: Weekly1.tex
mex/: 16_512_16_784.csv  MatMatSim1.fig  MatMatSim2.fig  cil_gpu_context.asv  cil_gpu_context.cpp  cil_gpu_context.m  cil_gpu_context.mexw64  gpa.cpp  gpa.m  gpa.mexw64  local.csv  output1.csv  shapes.mat  visual_mat_mat_mult.asv  visual_mat_mat_mult.m
modules/: CMakeLists.txt
modules/aam/include/: aam.h
modules/aam/src/: aam.cpp
modules/algorithms/: CMakeLists.txt
modules/algorithms/include/cil/algorithms/: algorithms.h
modules/algorithms/src/: procrustes.cpp
modules/core/: CMakeLists.txt
modules/core/include/cil/core/: core.h  types_c.h
modules/core/src/: system.cpp
modules/dl/: CMakeLists.txt
modules/dl/include/cil/dl/: dl.h
modules/dl/src/: dl_params.cpp  nn.cpp  training_data.cpp
modules/opencl/: CMakeLists.txt
modules/opencl/include/cil/opencl/: opencl.h
modules/opencl/kernels/: m_m_mul.cl  m_m_mul1.cl  m_m_mul2.cl  matrix_matrix_multiplication.cl  matrix_random_fill.cl  matrix_random_fill.ocl  nn_bp.cl  nn_error.cl  nn_feedforward.cl
modules/opencl/src/: cl_manager.cpp  cl_matrix.cpp
samples/: CMakeLists.txt  eigen-with-viennacl.cpp  gpu_matrix_randomnumbers.cpp  gpu_matrix_sample001.cpp  opencl_sample001.cpp
samples/AsfReaderSample/: AsfReaderSample.vcxproj  AsfReaderSample.vcxproj.filters  CMakeLists.txt
samples/AsfReaderSample/src/: main.cpp
samples/DLNNSample001/: CMakeLists.txt
samples/DLNNSample001/src/: main.cpp
